Change target iOS to 13 & Fix warning

--- a/ios-swift-mvvm-starter/Domain/Users/Views/Users.storyboard
+++ b/ios-swift-mvvm-starter/Domain/Users/Views/Users.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -78,7 +79,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="HVm-tj-wTu" id="RYF-la-NIk"/>
-                        <segue destination="H06-H6-xpD" kind="showDetail" id="aGo-gx-ekc"/>
+                        <segue destination="H06-H6-xpD" kind="showDetail" identifier="segueShowUserDetail" id="aGo-gx-ekc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pOa-Ei-cLT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
